@@ -87,6 +87,7 @@
             <informaltable>
                 <tgroup cols="2">
                     <colspec colnum="1" colwidth="1.5in" />
+                    <colspec colwidth="*"/>
 
                     <thead>
                         <row>
@@ -147,6 +148,7 @@
             <informaltable>
                 <tgroup cols="2">
                     <colspec colnum="1" colwidth="1.5in" />
+                    <colspec colwidth="*"/>
 
                     <thead>
                         <row>
@@ -250,6 +252,7 @@
             <informaltable>
                 <tgroup cols="2">
                     <colspec colnum="1" colwidth="1.5in" />
+                    <colspec colwidth="*"/>
 
                     <thead>
                         <row>
